--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "type": "module",
+  "scripts": {
+    "server": "nodemon src/server/server.js"
+  },
   "dependencies": {
     "better-sqlite3": "^11.10.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "nodemon": "^3.1.10",
     "telegraf": "^4.16.3"
   }
 }
